--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
     "icons": "^1.0.0",
     "next": "15.5.4",
     "react": "^19.1.0",
