--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
+    "aos": "^3.0.0-beta.6",
     "icons": "^1.0.0",
     "next": "15.5.4",
     "react": "^19.1.0",
