--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
     "aos": "^3.0.0-beta.6",
+    "gsap": "^3.13.0",
     "icons": "^1.0.0",
     "next": "15.5.4",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-tsparticles": "^2.12.2",
+    "react-vertical-timeline-component": "^3.5.3",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
