--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
+    "@vercel/analytics": "^1.2.2",
     "aos": "^3.0.0-beta.6",
     "gsap": "^3.13.0",
     "icons": "^1.0.0",
