--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "aos": "^3.0.0-beta.6",
     "gsap": "^3.13.0",
     "icons": "^1.0.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^8.20.0",
     "next": "15.5.4",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
