--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@splinetool/react-spline": "^4.1.0",
     "@vercel/analytics": "^1.5.0",
     "aos": "^3.0.0-beta.6",
+    "bcryptjs": "^3.0.3",
     "gsap": "^3.13.0",
     "icons": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.20.0",
     "next": "15.5.4",
