--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^8.20.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.13",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
